data/derived/comb/progs/unify/prog5902.ml.out
Characters 70-81:
  | (h::xs')  -> h + sumList xs';;
                     ^^^^^^^^^^^
Error: This expression has type int list
       but an expression was expected of type int
